# thumby

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/thumby/: cli.py  thumbnailer.py
