[project]
name = "thumby-cli"
version = "0.1.0"
description = "High-performance CLI tool to generate video thumbnail sheets with technical metadata headers."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "av>=9.0.0",
    "pymediainfo>=4.3",
    "Pillow>=9.2.0",
    "rich>=13.0.0",
]

[project.scripts]
thumby = "thumby.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thumby"]
