[project]
name = "thumby-cli"
version = "0.2.0"
description = "High-performance CLI tool to generate video thumbnail sheets with technical metadata headers."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "av>=14.0.0",
    "pymediainfo>=6.0.0",
    "Pillow>=11.0.0",
    "rich>=13.9.0",
]

[project.scripts]
thumby = "thumby.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thumby"]
